--- a/themes.css
+++ b/themes.css
@@ -7,18 +7,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
 
 /****ADDONS****/
-@import url("https://mwittrien.github.io/BetterDiscordAddons/Themes/BlurpleRecolor/BlurpleRecolor.css");
-@import url("https://warrayquipsome.github.io/Chillax/Addons/SettingsModalEdited.css");
-@import url("https://crearts-community.github.io/Friends-Grid/theme.css");
-@import url("https://dablulite.github.io/css-snippets/AccountDetailsGrid/import.css");
+@import url("https://ownermurder1337.github.io/themesdiscord/BlurpleRecolor.css");
+@import url("https://ownermurder1337.github.io/themesdiscord/SettingsModalEdited.css");
+@import url("https://ownermurder1337.github.io/themesdiscord/theme.css");
+@import url("https://ownermurder1337.github.io/themesdiscord/import.css");
 
 /****CHILLAX COMPONENTS****/
-@import url('https://warrayquipsome.github.io/Chillax/Components/WindowsButtons.css');
-@import url('https://warrayquipsome.github.io/Chillax/Components/UserArea.css');
-@import url('https://warrayquipsome.github.io/Chillax/Components/Embeds.css');
-@import url('https://warrayquipsome.github.io/Chillax/Components/ChatArea.css');
-@import url('https://warrayquipsome.github.io/Chillax/Components/ChannelHeader.css');
-@import url('https://warrayquipsome.github.io/Chillax/Components/EmojiPicker.css');
+@import url('https://ownermurder1337.github.io/themesdiscord/WindowsButtons.css');
+@import url('https://ownermurder1337.github.io/themesdiscord/UserArea.css');
+@import url('https://ownermurder1337.github.io/themesdiscord/Embeds.css');
+@import url('https://ownermurder1337.github.io/themesdiscord/ChatArea.css');
+@import url('https://ownermurder1337.github.io/themesdiscord/ChannelHeader.css');
+@import url('https://ownermurder1337.github.io/themesdiscord/EmojiPicker.css');
 
 /***TRANSPARENT CODES***/
 /**transparent part LVL I**/
